--- a/Recipe_page/index.html
+++ b/Recipe_page/index.html
@@ -1,6 +1,23 @@
 <html>
   <head>
     <title>Kevin McCall Recipe</title>
+    <meta name="shakshuka Recipe" content="How to make shakshuka, description, ingredient, direction, instruction">
+    <meta charset="utf-8">
+
+    <script type="text/javascript" src="javascript.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12345678-9', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
   </head>
 
   <body>
@@ -72,7 +89,7 @@
     </section>
 
     <section>
-      <form>
+      <form id="review-form">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name"> <br>
 
@@ -92,7 +109,7 @@
           <option value="4">Professional Chef</option>
         </select><br>
 
-        <label>
+        <label id=reviews>
           Review : <br><textarea name="name" rows="8" cols="80"></textarea>
         </label>
 
