--- a/Recipe_page/index.html
+++ b/Recipe_page/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <script type="text/javascript" src="javascript.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css_syntax.css">
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,7 +33,7 @@
     </header>
     <aside >
       <h2> <a name="ingredient"/>Ingredient</h2>
-        <ul>
+        <ul class="ingredients-list">
             <li>1 tbsp olive oil</li>
             <li>1/2 onion, peeled and diced</li>
             <li>1 clove garlic, minced</li>
@@ -76,7 +76,7 @@
 
       </form>
     <h2><a name="direction" /> Direction</h2>
-      <ol>
+      <ol class="ingredient-lists">
         <li>Heat a deep, large skillet or sauté pan on medium. Slowly warm olive oil in the pan. Add chopped onion, sauté for a few minutes until the onion begins to soften. Add garlic and continue to sauté till mixture is fragrant.</li>
         <li>Add the diced bell pepper, sauté for 5-7 minutes over medium until softened.</li>
         <li>Add tomatoes and tomato paste to pan, stir until blended. Add spices and sugar, stir, and allow mixture to simmer over medium heat for 5-7 minutes until it starts to reduce. </li>
